--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
         <h2>Contacto</h2>
     </section>
 
-    <div align="center"> 
+    <div align="center"> <br>
 
         <form action="grabar_contacto.html" method="post" enctype="application/x-www-form-urlencoded">
             
