--- a/pages/donde_estamos.html
+++ b/pages/donde_estamos.html
@@ -46,7 +46,10 @@
     <p aling="center">Molestie semper auctor montes facilisi blandit libero enim felis condimentum, at posuere penatibus nulla dictum in curabitur pulvinar, primis pellentesque ultrices sagittis nisi mauris porttitor egestas. Hac nisl phasellus ultrices malesuada aenean congue lectus cubilia ridiculus integer, rutrum fames pretium ultricies condimentum dignissim nec natoque tristique aliquet dictumst, himenaeos proin enim molestie ut imperdiet facilisis nibh ad. Per placerat lobortis blandit urna leo penatibus fringilla lectus donec justo magna, pulvinar imperdiet ultrices pharetra natoque vel id facilisi quis vitae litora, iaculis dictumst quisque faucibus arcu nisi porta laoreet pellentesque cum. Eget ac rhoncus ante ornare eu magnis natoque porta, turpis mus nullam habitant laoreet etiam felis dis pulvinar, metus duis ridiculus venenatis eros vitae mattis.
     </section>
     <br>
-    <p align="center"><img src="../images/maps.jpg" alt="Direccion"></p>
+    
+    <div class="img_scale" align="center">
+        <img src="../images/maps.jpg" alt="Direccion" class="img__maps" >
+    </div>
 
     <footer class="border">
         <table border="0" Cellspacing="50" align="center">
