--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header><h4>LLAMANOS +569 9876 5432</h4></header>
+    <header><h4>LLAMANOS +569 9876 5444</h4></header>
 
     <!--- NAV --->
     <nav class="nav">
@@ -34,12 +34,26 @@
             </section>
         </div>
         
-        <div class="contenedor__noticia1"><h3>Noticia 1</h3> <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula, congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. Tortor gravida nunc rhoncus maecenas ridiculus, ullamcorper scelerisque enim aptent metus, pellentesque mauris laoreet himenaeos. Rutrum tristique gravida scelerisque tortor morbi pellentesque ante, sollicitudin pretium cursus praesent quisque vulputate suscipit congue, hendrerit porta faucibus hac suspendisse ad.
-            Duis massa integer sagittis dictumst sollicitudin gravida dapibus sem, turpis imperdiet blandit vivamus morbi netus montes, nec venenatis tortor tincidunt litora aptent parturient. Morbi mattis cum nascetur blandit sapien condimentum luctus, primis nunc nulla tempor aptent senectus eget, pulvinar molestie ullamcorper consequat ac feugiat. Conubia felis nisi facilisis imperdiet velit eleifend sem, gravida dignissim odio tempor donec mollis pharetra, enim elementum mi curae suscipit nisl.</div>
-        <div class="contenedor__noticia1"><h3>Noticia 2</h3> <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula, congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. Tortor gravida nunc rhoncus maecenas ridiculus, ullamcorper scelerisque enim aptent metus, pellentesque mauris laoreet himenaeos. Rutrum tristique gravida scelerisque tortor morbi pellentesque ante, sollicitudin pretium cursus praesent quisque vulputate suscipit congue, hendrerit porta faucibus hac suspendisse ad.
-            Duis massa integer sagittis dictumst sollicitudin gravida dapibus sem, turpis imperdiet blandit vivamus morbi netus montes, nec venenatis tortor tincidunt litora aptent parturient. Morbi mattis cum nascetur blandit sapien condimentum luctus, primis nunc nulla tempor aptent senectus eget, pulvinar molestie ullamcorper consequat ac feugiat. Conubia felis nisi facilisis imperdiet velit eleifend sem, gravida dignissim odio tempor donec mollis pharetra, enim elementum mi curae suscipit nisl.</div>
-        <div class="contenedor__noticia1"><h3>Noticia 3</h3> <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula, congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. Tortor gravida nunc rhoncus maecenas ridiculus, ullamcorper scelerisque enim aptent metus, pellentesque mauris laoreet himenaeos. Rutrum tristique gravida scelerisque tortor morbi pellentesque ante, sollicitudin pretium cursus praesent quisque vulputate suscipit congue, hendrerit porta faucibus hac suspendisse ad.
-            Duis massa integer sagittis dictumst sollicitudin gravida dapibus sem, turpis imperdiet blandit vivamus morbi netus montes, nec venenatis tortor tincidunt litora aptent parturient. Morbi mattis cum nascetur blandit sapien condimentum luctus, primis nunc nulla tempor aptent senectus eget, pulvinar molestie ullamcorper consequat ac feugiat. Conubia felis nisi facilisis imperdiet velit eleifend sem, gravida dignissim odio tempor donec mollis pharetra, enim elementum mi curae suscipit nisl.</div>
+        <div class="contenedor__noticia1"><h3>Noticia 1</h3> <br>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula, congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. Tortor gravida nunc rhoncus maecenas ridiculus, ullamcorper scelerisque enim aptent metus, pellentesque mauris laoreet himenaeos. Rutrum tristique gravida scelerisque tortor morbi pellentesque ante, sollicitudin pretium cursus praesent quisque vulputate suscipit congue, hendrerit porta faucibus hac suspendisse ad.
+            Duis massa integer sagittis dictumst sollicitudin gravida dapibus sem, turpis imperdiet blandit vivamus morbi netus montes, nec venenatis tortor tincidunt litora aptent parturient. Morbi mattis cum nascetur blandit sapien condimentum luctus, primis nunc nulla tempor aptent senectus eget, pulvinar molestie ullamcorper consequat ac feugiat. Conubia felis nisi facilisis imperdiet velit eleifend sem, gravida dignissim odio tempor donec mollis pharetra, enim elementum mi curae suscipit nisl.
+           </div>
+
+        <div class="contenedor__noticia1"><h3>Inician las clases presenciales</h3> 
+            <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula , congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. 
+            <div class="img_scale">
+                <img src="./images/vuelta_a_clases.jpg" class="img__noticia" alt="De vuelta a clases">
+            </div>
+        </div>
+
+        <div class="contenedor__noticia1">
+            <h3>Medidas de seguridad</h3> 
+            <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula , congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. 
+            <div class="img_rotateY">
+                <img src="./images/clases_presenciales.jpg" class="img__noticia" alt="Clases Presenciales">
+            </div>
+        </div>
+        
         <div class="contenedor__noticia1"><h3>Noticia 4</h3> <br>Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula, congue tortor eu lectus natoque litora turpis fermentum, dui ridiculus convallis cras elementum vivamus quam. Tortor gravida nunc rhoncus maecenas ridiculus, ullamcorper scelerisque enim aptent metus, pellentesque mauris laoreet himenaeos. Rutrum tristique gravida scelerisque tortor morbi pellentesque ante, sollicitudin pretium cursus praesent quisque vulputate suscipit congue, hendrerit porta faucibus hac suspendisse ad.
             Duis massa integer sagittis dictumst sollicitudin gravida dapibus sem, turpis imperdiet blandit vivamus morbi netus montes, nec venenatis tortor tincidunt litora aptent parturient. Morbi mattis cum nascetur blandit sapien condimentum luctus, primis nunc nulla tempor aptent senectus eget, pulvinar molestie ullamcorper consequat ac feugiat. Conubia felis nisi facilisis imperdiet velit eleifend sem, gravida dignissim odio tempor donec mollis pharetra, enim elementum mi curae suscipit nisl.</div>
    
